fix -webkit-scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,7 @@ body {
     font-family: 'Nunito', sans-serif;
 }
 
-.navigations::-webkit-scrollbar {
-    display: none;
-}
-
-::-webkit-scrollbar {
+.headbar::-webkit-scrollbar {
     display: none;
 }
 
